// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatTopicPickerModal Snapshot Tests matches snapshot with new sample option 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 0.5,
            "maxWidth": 560,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 10,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 20,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EEEEEE",
          },
        ]
      }
    >
      <View
        testID="sheet-header"
      >
        <Text>
          Choose a Chat Topic
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="sheet-header-close"
        >
          <Text>
            Close
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 12,
          }
        }
        style={
          {
            "maxHeight": 520,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#EEEEEE",
                "borderRadius": 12,
                "borderWidth": 0.5,
                "marginBottom": 8,
                "opacity": 1,
                "paddingHorizontal": 14,
                "paddingVertical": 12,
              }
            }
          >
            <Text>
              ＋ New sample…
            </Text>
            <Text>
              Start blank and type your own first prompt
            </Text>
          </View>
          <View
            style={
              {
                "padding": 16,
              }
            }
          >
            <Text>
              No topics available for this combination.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;

exports[`ChatTopicPickerModal Snapshot Tests matches snapshot with persona 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 0.5,
            "maxWidth": 560,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 10,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 20,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EEEEEE",
          },
        ]
      }
    >
      <View
        testID="sheet-header"
      >
        <Text>
          Choose a Chat Topic
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="sheet-header-close"
        >
          <Text>
            Close
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 16,
            "paddingTop": 8,
          }
        }
      >
        <Text>
          Persona: 
          sage
        </Text>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 12,
          }
        }
        style={
          {
            "maxHeight": 520,
          }
        }
      >
        <View>
          <View
            style={
              {
                "padding": 16,
              }
            }
          >
            <Text>
              No topics available for this combination.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;

exports[`ChatTopicPickerModal Snapshot Tests matches snapshot with topics 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.5)",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 16,
            "borderWidth": 0.5,
            "maxWidth": 560,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 10,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 20,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#EEEEEE",
          },
        ]
      }
    >
      <View
        testID="sheet-header"
      >
        <Text>
          Choose a Chat Topic
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="sheet-header-close"
        >
          <Text>
            Close
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 12,
          }
        }
        style={
          {
            "maxHeight": 520,
          }
        }
      >
        <View>
          <View
            style={
              {
                "padding": 16,
              }
            }
          >
            <Text>
              No topics available for this combination.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;
